--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
     "node": ">=12"
   },
   "dependencies": {
-    "@next/mdx": "^10.0.3",
     "bs-webapi": "^0.19.1",
+    "gray-matter": "^4.0.2",
     "lazysizes": "^5.2.2",
     "next": "10.0.3",
     "postcss": "^8.2.1",
-    "prism-react-renderer": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "reason-react": "^0.9.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^1.6.22",
     "autoprefixer": "^10.1.0",
-    "babel-plugin-preval": "^5.0.0",
     "bs-platform": "^8.4.2",
     "cssnano": "^4.1.10",
     "next-transpile-modules": "^4.1.0",
